    that have particular metadata.
  * Preferred content expressions can use metadata=field=value
    to limit them to acting on files that have particular metadata.
  * view: New command that creates and checks out a branch that provides
    a structured view of selected metadata.
  * vadd, vpop, vcycle: New commands for operating within views.
  * Add progress display for transfers to/from external special remotes.
  * Windows webapp: Can set up box.com, Amazon S3, and rsync.net remotes
  * Windows webapp: Can create repos on removable drives.
  * Windows: Ensure HOME is set, as needed by bundled cygwin utilities.

 -- Joey Hess <joeyh@debian.org>  Mon, 10 Feb 2014 21:33:03 -0400

git-annex (5.20140210) unstable; urgency=medium

  * --in can now refer to files that were located in a repository at
    some past date. For example, --in="here@{yesterday}"
  * Fixed direct mode annexed content locking code, which is used to
    guard against recursive file drops.
  * This is the first beta-level release of the Windows port with important
    fixes (see below).
    (The webapp and assistant are still alpha-level on Windows.)
  * sync --content: Honor annex-ignore configuration.
  * sync: Don't try to sync with xmpp remotes, which are only currently
    supported when using the assistant.
  * sync --content: Re-pull from remotes after downloading content,
    since that can take a while and other changes may be pushed in the
    meantime.
  * sync --content: Reuse smart copy code from copy command, including
    handling and repairing out of date location tracking info.
    Closes: #737480
  * sync --content: Drop files from remotes that don't want them after
    getting them.
  * sync: Fix bug in automatic merge conflict resolution code when used
    on a filesystem not supporting symlinks, which resulted in it losing
    track of the symlink bit of annexed files.
  * Added ways to configure rsync options to be used only when uploading